navbar bug gestionUsuarios gestionConjutos fixed

--- a/welcomePage.html
+++ b/welcomePage.html
@@ -368,12 +368,12 @@
         </li>
 
         <li class="nav-item">
-          <a class="nav-link" data-toggle="collapse" href="#collGestionUsuarios" aria-expanded="false" aria-controls="collGestionUsuarios">
+          <a class="nav-link" data-toggle="collapse" href="#collGestionConjuntos" aria-expanded="false" aria-controls="collGestionConjuntos">
             <i class="mdi mdi-home-modern menu-icon"></i>
             <span class="menu-title">Gestión de conjuntos</span>
             <i class="menu-arrow"></i>
           </a>
-          <div class="collapse" id="collGestionUsuarios">
+          <div class="collapse" id="collGestionConjuntos">
             <ul class="nav flex-column sub-menu">
               <li class="nav-item"> <a class="nav-link" href="#" id="crearConjuntos">Crear conjunto</a></li>
               <li class="nav-item"> <a class="nav-link" href="#" id="editarConjuntos">Editar conjunto</a></li>
